Fix heigh overflow from module 01

--- a/01-rendering-logic-i/style.css
+++ b/01-rendering-logic-i/style.css
@@ -7,7 +7,11 @@ html,
 body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: hsl(0deg, 0%, 60%);
 }
 
 p {
@@ -18,6 +22,7 @@ header {
   padding-top: 64px;
   padding-bottom: 32px;
   border-bottom: 8px solid hsl(0deg, 0%, 40%);
+  background-color: hsl(0deg, 0%, 100%);
 }
 
 .max-width-wrapper {
@@ -49,8 +54,6 @@ strong {
 
 main {
   padding-top: 64px;
-  background-color: hsl(0deg, 0%, 60%);
-  min-height: 100%;
 }
 
 .card {
